fix(mod): handle null list metadata values safely